--- a/hadoop/nyse/pom.xml
+++ b/hadoop/nyse/pom.xml
@@ -25,28 +25,39 @@
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-common</artifactId>
-			<version>2.5.0-cdh5.2.0</version>
+			<version>2.7.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-mapreduce-client-core</artifactId>
+			<version>2.7.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-mapreduce-client-common</artifactId>
+			<version>2.7.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-yarn-common</artifactId>
+			<version>2.7.1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.hive</groupId>
 			<artifactId>hive-jdbc</artifactId>
-			<version>0.13.1-cdh5.2.0</version>
+			<version>1.2.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.hive</groupId>
 			<artifactId>hive-service</artifactId>
-			<version>0.13.1-cdh5.2.0</version>
+			<version>1.2.0</version>
 		</dependency>
 	</dependencies>
 
-	<repositories>
-		<repository>
-			<id>cloudera</id>
-			<name>cloudera</name>
-			<url>https://repository.cloudera.com/artifactory/cloudera-repos</url>
-		</repository>
-	</repositories>
 
 </project>
